1999-08-09  Thomas E. Dickey  <dickey@clark.net>

	* src/dedcolor.c:
	duh.  I never did test with the .dir_colors file using names.  debugged this
	on SCO, added the ability to use mixed case names.

	* src/cnames.rc: RCS_BASE

1999-08-07  Thomas E. Dickey  <dickey@clark.net>

	* src/ccodes.rc: updates from Slackware 3.6

1998-12-09  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: resync with my-autoconf (copyright)

1998-09-17  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c:
	fix so the -i option "works" even when I don't have color, and
	check the length of the command-line sort-options so I don't accidentally
	assume "-swb" is the same as "-bsw"

1998-07-21  Thomas E. Dickey  <dickey@clark.net>

	* src/dedline.c: oops: wrong ifdef for chown vs chgrp

	* src/showpath.c: show hostname prefix on pathname

	* src/ftree.c: changed showpath so we show the hostname

	* src/dedview.c: reordered the filelist header

1998-07-02  Thomas E. Dickey  <dickey@clark.net>

	* src/deddoit.c: missed a 'y' to 'o' change

1998-05-30  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c: correction - I did the 'ENTRIES' code on Mar 20.

	* src/dedsort.c: compensate for const change in td_lib

1998-05-29  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c: compile with g++
	fix for OSF/1 core dump

	* src/dedring.c, src/deduniq.c, src/dedsigs.c, src/ded.c, src/ded.h:
	compile with g++

	* src/ded.c: nits

1998-03-04  Thomas E. Dickey  <dickey@clark.net>

	* src/dedsort.c: missed one on renaming.

1998-03-01  Thomas E. Dickey  <dickey@clark.net>

	* src/dedmake.c: missed an if-then-else in the last change

	* src/makefile.2nd: add @PROG_EXT@

	* src/dedmake.c: comment

	* src/dedline.c: build on OS/2 EMX

	* src/dedmake.c: OS/2 EMX doesn't have 'link()'

	* src/ded2s.c:
	mods to build on EMX, which has no S_ISVTX, S_IFBLK or major/minor macros

	* src/ded.h:
	mods to build on EMX, which has no link/symlink, nor S_IFBLK

	* configure.in: pass '$AWK' to config.status
