@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19990809
+MANIFEST for ded, version t19990810
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
