@@ -1,3 +1,10 @@
+1999-08-10  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/ded.c: change -b to toggle
+
+	* src/deddoit.c:
+	SCO sets errno to EPERM in system() even when there's no error.
+
 1999-08-09  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/dedcolor.c:
